--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-   <meta charset="UTF-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weather app</title>
     <link rel="stylesheet" href="style.css" />
@@ -37,6 +37,12 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="info-app">
+        <h2 class="tittle-app">weather app</h2>
+        <p class="text-tittle">
+          برای بررسی آب و هوای شهر خود نام شهر را تایپ و روی دکمه سرچ کلیک کنید
+        </p>
       </div>
     </div>
 
